--- a/index.html
+++ b/index.html
@@ -194,5 +194,16 @@
     data-agent-id="agt_q0vpBpHa"
     data-monitor="true">
     </script>
+    
+<script
+    type="module"
+    src="https://agent.d-id.com/v1/index.js"
+    data-name="did-agent"
+    data-mode="fabio"
+    data-client-key="Z29vZ2xlLW9hdXRoMnwxMDYwNzczMzU2NjY2NzU3OTEwOTQ6amN2Q1VMMmVQX04tYmJxWjFGUWlh"
+    data-agent-id="agt_q0vpBpHa"
+    data-monitor="true">
+</script>
+    
 </body>
 </html>
