--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     data-name="did-agent"
     data-mode="fabio"
     data-client-key="Z29vZ2xlLW9hdXRoMnwxMDYwNzczMzU2NjY2NzU3OTEwOTQ6amN2Q1VMMmVQX04tYmJxWjFGUWlh"
-    data-agent-id="agt_q0vpBpHa"
+    data-agent-id="agt_lABjbbDQ"
     data-monitor="true">
 </script>
     
