--- a/trade.html
+++ b/trade.html
@@ -147,8 +147,6 @@
         </section>
     </div>
 
-    <script src="chatbot.js"></script>
-
     <script>
         // Initialize map
         const map = L.map('tradeMap').setView([33.3152, 44.3661], 7);
@@ -342,5 +340,16 @@
             window.URL.revokeObjectURL(url);
         }
     </script>
+<div id="chatbot-container" class="chatbot-container">
+        <div id="chatbot-messages" class="chatbot-messages"></div>
+        <div class="chatbot-input">
+            <input type="text" id="chatbot-input" placeholder="Ask a question...">
+            <button onclick="sendChatMessage()">Send</button>
+        </div>
+    </div>
+    <div id="chatbot-toggle" class="chatbot-toggle">
+        <i class="fas fa-comments"></i>
+    </div>
+    <script src="chat.js"></script>
 </body>
 </html> 
