Add config example and load API key dynamically

--- a/news.html
+++ b/news.html
@@ -157,6 +157,7 @@
     <div id="chatbot-toggle" class="chatbot-toggle">
         <i class="fas fa-comments"></i>
     </div>
+    <script src="config.js"></script>
     <script src="chat.js"></script>
 </body>
 </html> 
