--- a/gdp.html
+++ b/gdp.html
@@ -270,6 +270,7 @@
     <div id="chatbot-toggle" class="chatbot-toggle">
         <i class="fas fa-comments"></i>
     </div>
+    <script src="config.js"></script>
     <script src="chat.js"></script>
 </body>
 </html> 
