--- a/glossary.html
+++ b/glossary.html
@@ -393,6 +393,7 @@
     <div id="chatbot-toggle" class="chatbot-toggle">
         <i class="fas fa-comments"></i>
     </div>
+    <script src="config.js"></script>
     <script src="chat.js"></script>
 </body>
 </html> 
